--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@ html body{
 	height: 450px;
 	 box-shadow: 0px 0px 4px 1px rgba(181,163,181,1);
 	 background-color: white;
-	 position: absolute;
 }
 
 #login{
@@ -100,4 +99,16 @@ input#enterpassword { -webkit-text-security: disc; }
 	position: absolute;
 	margin-top: 40px;
 	font-size: 13px;
+}
+#errormessage{
+ position: absolute;
+  color: rgb(213,0,0);
+  margin-top: 50px;
+  margin-left: 34px;
+  font-size: 12px;
+  font-weight: bold;
+  text-align: left;
+  
+
+
 }
